--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/umijs/dumi-template",
+    "url": "https://github.com/wu985215993/stickerwu-templates.git",
     "branch": "main"
   },
   "lint-staged": {
