--- a/package.json
+++ b/package.json
@@ -33,10 +33,16 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/sortable": "^7.0.1",
+    "@dnd-kit/utilities": "^3.2.0",
+    "antd": "^4.21.5",
     "react": "^16.12.0"
   },
   "devDependencies": {
     "@umijs/test": "^3.0.5",
+    "babel-plugin-import": "^1.13.5",
     "dumi": "^1.1.0",
     "father-build": "^1.19.1",
     "gh-pages": "^3.0.0",
